Fixed collapsing bug.
Removed 'top: 200px' and added 'margin-top: 200px' so it would push down the rest of the content.

--- a/resources/style.css
+++ b/resources/style.css
@@ -96,8 +96,8 @@ body {
     display: block;
     width: 100%;
     position: relative;
-    top: 25%;
     line-height: normal;
+    margin-top: 200px;
 }
 
 .landing h5 {
@@ -146,8 +146,9 @@ body {
     font-size: 5rem;
     border-top: 1.5px dotted rgba(255,255,255,.6);
     margin: 0 auto;
-    padding-top: 35px;
+    padding-top: 40px;
     display: block;
+    text-transform: uppercase;
 }
 
 @media only screen and (max-width: 320px) {
@@ -161,7 +162,7 @@ body {
     
 }
 
-.about .about-box {
+.about-box {
     padding: 2% 3%;
     border: 1px solid blue;
     width: 65%;   
